MNK-1964 : ping for server start to allow both longer and shorter timeouts
git-svn-id: http://svn.terracotta.org/svn/ehcache@3435 b9324663-ca0f-0410-8574-be9b3887307d